--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,16 +86,19 @@ if (NOT virtualenv_file_stamp)
 
 endif ()
 
-execute_process( 
-    COMMAND ${python_exec} ${CMAKE_CURRENT_SOURCE_DIR}/message_generator/generate.py 
-    --input ${CMAKE_CURRENT_SOURCE_DIR}/definitions
-    --enable-cpp 
-    --enable-python
-    --output-dir ${PROJECT_BINARY_DIR}/messages
-    COMMAND_ECHO STDOUT 
-    COMMAND_ERROR_IS_FATAL ANY
-)
+if (NOT EXISTS ${CMAKE_CURRENT_BINARY_DIR}/interface_generated AND NOT $ENV{REGENERATE_INTERFACE})
+    execute_process( 
+        COMMAND ${python_exec} ${CMAKE_CURRENT_SOURCE_DIR}/message_generator/generate.py 
+        --input ${CMAKE_CURRENT_SOURCE_DIR}/definitions
+        --enable-cpp 
+        --enable-python
+        --output-dir ${PROJECT_BINARY_DIR}/messages
+        COMMAND_ECHO STDOUT 
+        COMMAND_ERROR_IS_FATAL ANY
+    )
 
+    file(TOUCH ${CMAKE_CURRENT_BINARY_DIR}/interface_generated)
+endif ()
 set_property (DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS
     ${CMAKE_CURRENT_SOURCE_DIR}/message_generator/generate.py)
 set_property (DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS
